--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,56630],[[4,5,6,7,[],[1,67,56554],[],[[8,0,0,[],[1,963,11067],[]],[9,0,0,[],[1,12031,6710],[]],[10,0,0,[],[1,18743,6750],[]],[11,0,0,[],[1,25495,7442],[]],[12,0,0,[],[1,32938,5891],[]],[13,0,0,[],[1,38831,10240],[]],[14,0,0,[],[1,49072,7544],[]]],[],[7,7,0,0]]],[],[],[7,7,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,38188],[[4,5,6,7,[],[0,30,38155],[],[[8,0,0,[],[0,365,6275,9],[]],[10,0,0,[],[1,6640,4299],[]],[11,0,0,[],[1,10940,4734],[]],[12,0,0,[],[1,15675,4822],[]],[13,0,0,[],[0,20498,7227,14],[]],[15,0,0,[],[0,27726,5640,9],[]],[16,0,0,[],[0,33367,4817,9],[]]],[],[7,3,4,0]]],[],[],[7,3,4,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Ksu robotframework","*C:\\Users\\Ksenia\\Documents\\ProjectKsu2022\\Ksu_robotframework","*.","*Test Login Rf","*C:\\Users\\Ksenia\\Documents\\ProjectKsu2022\\Ksu_robotframework\\test_login_rf.robot","*test_login_rf.robot","*<p>Suite description\x3c/p>","*Login to the system","*Select polish language","*Leave login empty","*Type in invalid password","*Assert text of the sign in box title","*Add new player","*Log out of the site"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Ksu robotframework","*C:\\Users\\Ksenia\\Documents\\ProjectKsu2022\\Ksu_robotframework","*.","*Test Login Rf","*C:\\Users\\Ksenia\\Documents\\ProjectKsu2022\\Ksu_robotframework\\test_login_rf.robot","*test_login_rf.robot","*<p>Suite description\x3c/p>","*Login to the system","*Title should have been 'Scouts panel' but was 'PANEL SKAUTINGOWY'.","*Select polish language","*Leave login empty","*Type in invalid password","*Assert text of the sign in box title","*The text of element 'xpath=//*[contains(@class, 'MuiTypography-root MuiTypography-h5')]' should have been 'Scouts Panel' but it was 'PANEL SKAUTINGOWY'.","*Add new player","*Log out of the site"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:56","fail":0,"label":"All Tests","pass":7,"skip":0}],[],[{"elapsed":"00:00:57","fail":0,"id":"s1","label":"Ksu robotframework","name":"Ksu robotframework","pass":7,"skip":0},{"elapsed":"00:00:57","fail":0,"id":"s1-s1","label":"Ksu robotframework.Test Login Rf","name":"Test Login Rf","pass":7,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:38","fail":4,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:38","fail":4,"id":"s1","label":"Ksu robotframework","name":"Ksu robotframework","pass":3,"skip":0},{"elapsed":"00:00:38","fail":4,"id":"s1-s1","label":"Ksu robotframework.Test Login Rf","name":"Test Login Rf","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1662278995565;
+window.output["baseMillis"] = 1662925489086;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 56778;
+window.output["generated"] = 38215;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
